# powershell-volume-mixer

./: .gitignore  README.md
core/: Cargo.toml
core/src/: audio.rs  error.rs  lib.rs  script.rs
core/src/tests/: audio.rs
gui/: Cargo.toml  build.rs
gui/src/: app.rs  config.rs  main.rs
